@@ -7,7 +7,7 @@
 //
 // **********************************************************************
 
-// Generated by makeprops.py from file `../config/PropertyNames.def', Wed May 11 17:57:18 2005
+// Generated by makeprops.py from file `../config/PropertyNames.def', Thu Jun  2 15:14:44 2005
 
 // IMPORTANT: Do not edit this file -- any edits made here will be lost!
 
@@ -20,6 +20,7 @@ namespace IceInternal
             @"^Ice\.ACM\.Client$",
             @"^Ice\.ACM\.Server$",
             @"^Ice\.ChangeUser$",
+            @"^Ice\.Compression\.Level$",
             @"^Ice\.Config$",
             @"^Ice\.ConnectionIdleTime$",
             @"^Ice\.Default\.Host$",
@@ -120,6 +121,7 @@ namespace IceInternal
             @"^IcePack\.Registry\.Admin\.ThreadPool\.SizeMax$",
             @"^IcePack\.Registry\.Admin\.ThreadPool\.SizeWarn$",
             @"^IcePack\.Registry\.Admin\.ThreadPool\.StackSize$",
+            @"^IcePack\.Registry\.AdminIdentity$",
             @"^IcePack\.Registry\.Client\.AdapterId$",
             @"^IcePack\.Registry\.Client\.Endpoints$",
             @"^IcePack\.Registry\.Client\.PublishedEndpoints$",
@@ -136,6 +138,8 @@ namespace IceInternal
             @"^IcePack\.Registry\.Internal\.ThreadPool\.SizeMax$",
             @"^IcePack\.Registry\.Internal\.ThreadPool\.SizeWarn$",
             @"^IcePack\.Registry\.Internal\.ThreadPool\.StackSize$",
+            @"^IcePack\.Registry\.LocatorIdentity$",
+            @"^IcePack\.Registry\.QueryIdentity$",
             @"^IcePack\.Registry\.Server\.AdapterId$",
             @"^IcePack\.Registry\.Server\.Endpoints$",
             @"^IcePack\.Registry\.Server\.PublishedEndpoints$",
@@ -178,6 +182,7 @@ namespace IceInternal
             @"^IceGrid\.Registry\.Admin\.ThreadPool\.SizeMax$",
             @"^IceGrid\.Registry\.Admin\.ThreadPool\.SizeWarn$",
             @"^IceGrid\.Registry\.Admin\.ThreadPool\.StackSize$",
+            @"^IceGrid\.Registry\.AdminIdentity$",
             @"^IceGrid\.Registry\.Client\.AdapterId$",
             @"^IceGrid\.Registry\.Client\.Endpoints$",
             @"^IceGrid\.Registry\.Client\.PublishedEndpoints$",
@@ -194,6 +199,8 @@ namespace IceInternal
             @"^IceGrid\.Registry\.Internal\.ThreadPool\.SizeMax$",
             @"^IceGrid\.Registry\.Internal\.ThreadPool\.SizeWarn$",
             @"^IceGrid\.Registry\.Internal\.ThreadPool\.StackSize$",
+            @"^IceGrid\.Registry\.LocatorIdentity$",
+            @"^IceGrid\.Registry\.QueryIdentity$",
             @"^IceGrid\.Registry\.Server\.AdapterId$",
             @"^IceGrid\.Registry\.Server\.Endpoints$",
             @"^IceGrid\.Registry\.Server\.PublishedEndpoints$",
